# powermanagementunit

./: .gitignore  CMakeLists.txt  README.md  TESTLIST.md
arduino/: Makefile  library.properties.template
include/number/: CMakeLists.txt  Percent.h
include/powermu/: CMakeLists.txt  PowerMU.h
include/sleepable/: AskToSleep.h  CMakeLists.txt  Sleepable.h  SleepableBus.h  SleepablePrivate.h  WakeUp.h
include/sleepable/predefined/: CMakeLists.txt  VoidSleepable.h
mocks/: CMakeLists.txt  GetLevelStub.c  GetLevelStub.h  SimpleDeviceSpy.c  SimpleDeviceSpy.h
mocks/device/: NotSoSimpleDeviceSpy.c  NotSoSimpleDeviceSpy.h  SimpleDeviceSpy.c  SimpleDeviceSpy.h
mocks/powermu/: GetLevelStub.c
mocks/sleepable/: AlreadyOffSimpleSleepableStub.c  AlreadyOffSimpleSleepableStub.h  FailingSimpleSleepableStub.c  FailingSimpleSleepableStub.h  NotSoSimpleSleepableStub.c  NotSoSimpleSleepableStub.h  SimpleSleepableStub.c  SimpleSleepableStub.h
src/: CMakeLists.txt
src/number/: Percent.c
src/powermu/: PowerMU.c
src/sleepable/: AskToSleep.c  Sleepable.c  SleepableBus.c  WakeUp.c
src/sleepable/predefined/: VoidSleepable.c
test/: CMakeLists.txt  RunAllTests.cpp
test/number/: PercentTest.cpp
test/powermu/: BalanceTest.cpp  GetLevelTest.cpp
test/sleepable/: AskDeviceToSleepTest.cpp  SleepableBusTest.cpp  WakeUpDeviceTest.cpp
